cmake_minimum_required(VERSION 3.26)
project(cmps1131-prog1)

# Include the CMakeLists.txt from following sub-folders
add_subdirectory(week1)
add_subdirectory(week2)
add_subdirectory(week3)
add_subdirectory(week4)
add_subdirectory(week5)
add_subdirectory(week6)
add_subdirectory(week7)
add_subdirectory(week8)
add_subdirectory(week9)